--- a/home.html
+++ b/home.html
@@ -248,7 +248,16 @@
                         <div class="sliders">
                             <div class="slide">
                                 <div class="slidearea">
-                                    ...
+                                    <img class="section-team--avatar" src="media/mulher1.png" alt="">
+                                    <div class="section-team--name">Jane Doe</div>
+                                    <div class="section-team--role">Master mind</div>
+                                    <div class="section-team-social">
+                                        <a class="section-team-social" href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
                                 </div>
                             </div><div class="slide">
                                 <div class="slidearea">
